--- a/teoria/10.-Service/serviceproyect/package.json
+++ b/teoria/10.-Service/serviceproyect/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.0"
+    "react-hook-form": "^7.45.0",
+    "sweetalert2": "^11.7.12"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
