--- a/teoria/10.-Service/serviceproyect/package.json
+++ b/teoria/10.-Service/serviceproyect/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
+    "react-router-dom": "^6.14.0",
     "sweetalert2": "^11.7.12"
   },
   "devDependencies": {
